--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
     "@fastify/multipart": "^9.0.3",
+    "@vimeo/vimeo": "^3.0.3",
     "dotenv": "^16.5.0",
-    "fastify": "^5.3.3",
-    "vimeo": "^2.3.1"
+    "fastify": "^5.3.3"
   },
   "devDependencies": {
     "@types/vimeo": "^2.1.8",
+    "@types/vimeo__vimeo": "^3.0.1",
     "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
